force-app/main/default/objects/Order/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <label>Driver</label>
    <description>The delivery driver assigned to fulfil this order.</description>
    <inlineHelpText>Select the driver responsible for delivering this order to the customer.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>