force-app/main/default/objects/Order/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Free-form notes about the order, such as delivery instructions, customer remarks, or handling details.</description>
    <inlineHelpText>Add any additional context about this order that does not fit other fields.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>