force-app/main/default/objects/Order/fields/Ordered_Dishes__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Dishes__c</fullName>
    <label>Ordered Dishes</label>
    <description>Summary of the dishes included in this order, captured as free text for quick reference by the kitchen and delivery agent.</description>
    <inlineHelpText>List each ordered dish, quantity, and any special requests, one per line.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>